--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "core-js": "^3.6.4",
     "date-fns": "^2.12.0",
     "electron-store": "^5.1.1",
+    "express": "^4.17.1",
+    "ip": "^1.1.5",
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
