--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "rgp-occupancy-counter",
-  "version": "0.1.0",
+  "version": "1.0.0-beta.0",
+  "description": "Utilizes Rock Gym Pro's API to provide a check-out feature, which enables occupancy counting and contact tracing",
+  "author": "Chris Regan",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,6 +10,7 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
@@ -33,6 +36,7 @@
     "@vue/cli-service": "^4.3.0",
     "babel-eslint": "^10.1.0",
     "electron": "^5.0.0",
+    "electron-icon-builder": "^1.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.19.0",
